Calendar WebSocket & working SMTP service
